bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: not found: value message
    message=litmessage()
    ^BDR:5: error: not found: value message
    if (message=='R'){
        ^BDR:8: error: not found: value message
    }else if (message=='L'){
              ^BDR:11: error: not found: value message
     }else if (message=='I'){
               ^BDR:14: error: not found: value message
    }else if (message=='A'){
              ^BDR:16: error: not found: value message
    }else if (message=='B'){
              ^BDR:19: error: not found: value message
    }else if (message=='C'){
              ^BDR:23: error: not found: value message
    }else if (message=='Z'){
              ^BDR:25: error: not found: value message
    }else if (message=='Y'){
              ^BDR:28: error: not found: value message
    }else if (message=='X'){
              ^